--- a/key.html
+++ b/key.html
@@ -18,14 +18,18 @@
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="./Starter Template for Bootstrap_files/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  <style type="text/css"></style></head>
+  <style type="text/css"></style>
+
+  <link  href="http://aasjax.googleapis.com/ajax/libs/jqueryui/1/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
+
+</head>
+
 
   <body>
 
@@ -50,156 +54,203 @@
       </div>
     </div>
 
+    <div> &nbsp </div>
+    <br>
+    <div class = "center text-center"> 
+    <button type="button" class=" ENDGAME btn btn-lg btn-info">SEE YOUR RESULTS</button>
+    </div>
+
     <div class="container">
       <div class="starter-template">
         <h1> Dichotomous Key </h1>
       </div>
+    </div>
+
+  <div class = "block">
+  <div class = "right-block"> 
       <div class = "question_container">
         <div class = "question"> 
           <div class = "qtext">1. a. Animal is cold blooded </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 2 </div>
+          <!--- <div class = "qspace ui-widget-header"> .............. </div> ---->
+          <div class = "qtext">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp go to 2 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal is warm-blooded </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 7 </div>
+          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal is warm-blooded                     </div>
+          <!--- <div class = "qspace ui-widget-header"> .............. </div> ---->
+          <div class = "qtext">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp go to 7 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">2. a. Animal has two chambered heart </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 3 </div>
+          <div class = "qtext _1">2. a.  </div>
+          <div data = "1" class = "_1 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qtext">&nbsp&nbspgo to 3 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal has more than two chambered heart </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 4 </div>
+          <div class = "qtext _2">&nbsp&nbsp&nbsp b.  </div>
+          <div data = "2" class = "_2 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qtext">&nbsp&nbspgo to 4 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">3. a. Animal’s internal skeleton is made of bone </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Symphysodon aequifasciatus) </div>
+          <div class = "qtext _3">3. a. </div>
+          <div data = "3" class = "_3 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _15" id = "(Symphysodon aequifasciatus)"> &nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "15" class = "_15 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal’s internal skeleton is made of cartilage </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Xiphias gladius) </div>
+          <div class = "qtext _4">&nbsp&nbsp&nbsp b. </div>
+          <div data = "4" class = "_4 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _16" id = "(Xiphias gladius)">&nbsp Animal &nbsp</div>
+          <div data =  "16" class = "_16 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">4. a. Animal undergoes metamorphosis</div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 5 </div>
+          <div class = "qtext _5">4. a. </div>
+          <div data = "5" class = "_5 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qtext">&nbsp&nbspgo to 5 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal does not undergo metamorphosis </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 6 </div>
+          <div class = "qtext _6">&nbsp&nbsp&nbsp b. </div>
+          <div data = "6" class = "_6 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qtext">&nbsp&nbspgo to 6 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">5. a. Animal feeds on dead or living matter</div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Rhinella marina)</div>
+          <div class = "qtext _7">5. a. </div>
+          <div data = "7" class = "_7 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _17" id = "(Rhinella marina)"> &nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "17" class = "_17 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal feeds on living matter</div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Tinctorius citronella)</div>
+          <div class = "qtext _8">&nbsp&nbsp&nbsp b. </div>
+          <div data = "8" class = " _8 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _18" id = "(Tinctorius citronella)"> &nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "18" class = "_18 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">6. a. Animal has four legs</div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Varanus rosenbergi)</div>
+          <div class = "qtext _9">6. a. </div>
+          <div data = "9" class = "_9 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _19" id = "(Varanus rosenbergi)">&nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "19" class = " _19 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal does not have any legs</div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Eunectes murinus)</div>
-          <div class = "qtext">go to 6 </div>
-
+          <div class = "qtext _10">&nbsp&nbsp&nbsp b. </div>
+          <div data = "10"  class = "_10 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _20" id = "(Eunectes murinus)"> &nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "20" class = "_20 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">7. a. Animal’s lungs have parabronchi  </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 8 </div>
+          <div class = "qtext _11">7. a.   </div>
+          <div data = "11" class = "_11 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qtext">&nbsp&nbspgo to 8 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal’s lungs have alveoli </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qtext">go to 9 </div>
+          <div class = "qtext _12">&nbsp&nbsp&nbsp b.  </div>
+          <div data = "12" class = " _12 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qtext">&nbsp&nbspgo to 9 </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">8. a. Animal feeds on fish and other aquatic animals</div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Gavia immer)</div>
+          <div class = "qtext _13">8. a. </div>
+          <div data = "13" class = "_13 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _21" id = "(Gavia immer)"> &nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "21" class = "_21 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal feeds on insects and some fruit </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Cyanerpes cyaneus)</div>
+          <div class = "qtext _14">&nbsp&nbsp&nbsp b.  </div>
+          <div data = "14" class = " _14 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _22" id = "(Cyanerpes cyaneus)">&nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "22" class = "_22 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">9. a. Animal often forms nursery roosts, where caring takes place </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Acerodon jubatus)</div>
+          <div class = "qtext _15">9. a.  </div>
+          <div data = "15" class = "_15 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _23" id = "(Acerodon jubatus)">&nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "23" class = "_23 qspace ui-widget-header"> ................................ </div>
         </div>
         <div class = "question"> 
-          <div class = "qtext">&nbsp&nbsp&nbsp b. Animal often leaves the youngster during nursing period near the area where it enters the water. </div>
-          <div class = "qspace"> .............. </div>
-          <div class = "qanimal">(Phoca groenlandica)</div>
+          <div class = "qtext _16">&nbsp&nbsp&nbsp b.  </div>
+          <div data = "16" class = "_16 qspace ui-widget-header"> ............................................................................................... </div>
+          <div class = "qanimal _24" id = "(Phoca groenlandica)">&nbsp&nbspAnimal&nbsp&nbsp</div>
+          <div data =  "24" class = "_24 qspace ui-widget-header"> ................................ </div>
         </div>
         </div>
-
-    <div> &nbsp </div>
-
+        <br><br><br><br><br><br><br><br>
+      </div>
+  
+  <div class = "left-block"> 
       <div class="starter-template">
         <h2> Answers </h2>
       </div>
       
       <div class = "answerT_container">
-          <div class = "answer term"> cold blooded </div>
-          <div class = "answer term"> warm-blooded </div>
-          <div class = "answer term"> two chambered heart </div>
-          <div class = "answer term"> more than two chambered heart </div>
-          <div class = "answer term"> internal skeleton is made of bone </div>
-          <div class = "answer term"> internal skeleton is made of cartilage </div>
-          <div class = "answer term"> undergoes metamorphosis </div>
-          <div class = "answer term"> feeds on dead or living matter </div>
-          <div class = "answer term"> feeds on living matter </div>
-          <div class = "answer term"> has four legs </div>
-          <div class = "answer term"> does not have any legs </div>
-          <div class = "answer term"> lungs have parabronchi </div>
-          <div class = "answer term"> feeds on fish and other aquatic animals </div>
-          <div class = "answer term"> feeds on insects and some fruit </div>
-          <div class = "answer term"> forms nursery roosts, where caring takes place </div>
-          <div class = "answer term"> often leaves the youngster during nursing period near the area where it enters the water. </div>
+          <div data =  "1" class = "answer term ui-widget-content"> Animal has a two chambered heart </div>
+          <div data =  "2" class = "answer term ui-widget-content"> Animal has more than two chambered heart </div>
+          <div data =  "3" class = "answer term ui-widget-content"> Animal's internal skeleton is made of bone </div>
+          <div data =  "4" class = "answer term ui-widget-content"> Animal's is internal skeleton is made of cartilage </div>
+          <div data =  "5" class = "answer term ui-widget-content"> Animal undergoes metamorphosis </div>
+          <div data =  "6" class = "answer term ui-widget-content"> Animal feeds on dead or living matter </div>
+          <div data =  "7" class = "answer term ui-widget-content"> Animal feeds on living matter </div>
+          <div data =  "8" class = "answer term ui-widget-content"> Animal has four legs </div>
+          <div data =  "9" class = "answer term ui-widget-content"> Animal does not have any legs </div>
+          <div data =  "10" class = "answer term ui-widget-content"> Animal's lungs have parabronchi </div>
+          <div data =  "11" class = "answer term ui-widget-content"> Animal feeds on fish and other aquatic animals </div>
+          <div data =  "12" class = "answer term ui-widget-content"> Animal feeds on insects and some fruit </div>
+          <div data =  "13" class = "answer term ui-widget-content"> Animal forms nursery roosts, where caring takes place </div>
+          <div data =  "14" class = "answer term ui-widget-content"> Animal  leaves the youngster during nursing period near the water. </div>
       </div>
       
       <div class = "answerA_container">
-          <div  class = "answer animal"> (Symphysodon aequifasciatus) </div>
-          <div  class = "answer animal"> (Xiphias gladius) </div>
-          <div  class = "answer animal"> (Rhinella marina) </div>
-          <div  class = "answer animal"> (Tinctorius citronella) </div>
-          <div  class = "answer animal"> (Varanus rosenbergi) </div>
-          <div  class = "answer animal"> (Eunectes murinus) </div>
-          <div  class = "answer animal"> (Gavia immer) </div>
-          <div  class = "answer animal"> (Cyanerpes cyaneus) </div>
-          <div  class = "answer animal"> (Acerodon jubatus) </div>
-          <div  class = "answer animal"> (Phoca groenlandica) </div>
+          <div  data =  "15" class = "answer animal ui-widget-content"> Symphysodon aequifasciatus</div>
+          <div  data =  "16" class = "answer animal ui-widget-content"> Xiphias gladius </div>
+          <div  data =  "17" class = "answer animal ui-widget-content"> Rhinella marina </div>
+          <div  data =  "18" class = "answer animal ui-widget-content"> Tinctorius citronella </div>
+          <div  data =  "19" class = "answer animal ui-widget-content"> Varanus rosenbergi </div>
+          <div  data =  "20" class = "answer animal ui-widget-content"> Eunectes murinus </div>
+          <div  data =  "21" class = "answer animal ui-widget-content"> Gavia immer </div>
+          <div  data =  "22" class = "answer animal ui-widget-content"> Cyanerpes cyaneus </div>
+          <div  data =  "23" class = "answer animal ui-widget-content"> Acerodon jubatus </div>
+          <div  data =  "24" class = "answer animal ui-widget-content"> Phoca groenlandica </div>
       </div>
     </div><!-- /.container -->
+  </div>
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./js/jquery.min.js"></script>
-    <script src="./Starter Template for Bootstrap_files/bootstrap.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./Starter Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
-    <script type="text/javascript"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.js"></script>
 
-    <script src= "./jquery-ui-1.11.1/external/jquery/jquery.js"  ></script>
-    <script src = "./jquery-ui-1.11.1/jquery-ui.js" type="text/javascript"></script>
-    <script src = "./js/script.js" type="text/javascript"></script>
+<script>
 
-</body></html>
+ var results = [0,0,0,0,0,0,0,0,0,0,0,0,0,0, 0,0,0,0,0,0,0,0,0,0]
+ var answer;
+    $(function() {
+    $( ".answer" ).draggable({ snap: ".ui-widget-header", snapMode:"inner",snapTolerance: 20, drag: function( event, ui ) {
+      answer = this
+      }
+    });
+    $( ".qspace" ).droppable({
+      drop: function( event, ui ) {
+        console.log($(answer).attr("data"));
+        console.log($(this).attr("data"));
+        if ($(answer).attr("data") == $(this).attr("data")){
+            results[$(this).attr("data") - 1] = 1;
+          } else {
+            results[$(this).attr("data") - 1] = 0;
+        }
+      }
+    });
+
+    $(".ENDGAME").click(function(){
+        for (var i = 0;  i <= results.length ; i++) {
+          if (results[i]  == 1) {
+            $('._' + (i+1)).css('color', "green");
+            console.log("birşeyler oldu correct")
+          } else {
+            $('._' + (i+1)).css('color', "red");
+            console.log("birşeyler oldu WRONG")
+          }
+        };
+    })
+  });
+</script>
+</body>
+</html>
